cf_analysis_results/checkerframework_3.42.0_results/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8.txt
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/ded/model/Diagram.java:534: error: (required.method.not.called) $$ 4 $$ method close $$ serialized.write(w, 2, 0) $$ java.io.Writer $$ possible exceptional exit due to w.append('\n') with exception type java.io.IOException $$ ( 19191, 19216 ) $$ @MustCall method close may not have been invoked on serialized.write(w, 2, 0) or any of its aliases.
                serialized.write(w, 2, 0);
                                ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to w.append('\n') with exception type java.io.IOException
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/ded/model/Diagram.java:645: error: (required.method.not.called) $$ 4 $$ method close $$ flat $$ util.FlattenInputStream $$ possible exceptional exit due to flat.readInt() with exception type util.XParse $$ ( 22681, 22734 ) $$ @MustCall method close may not have been invoked on flat or any of its aliases.
        FlattenInputStream flat = new FlattenInputStream(is);
                           ^
  The type of object is: util.FlattenInputStream.
  Reason for going out of scope: possible exceptional exit due to flat.readInt() with exception type util.XParse
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1194: error: (required.method.not.called) $$ 4 $$ method close $$ quote(string, sw) $$ java.io.Writer $$ regular method exit $$ ( 39450, 39467 ) $$ @MustCall method close may not have been invoked on quote(string, sw) or any of its aliases.
                return quote(string, sw).toString();
                            ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1401: error: (required.method.not.called) $$ 4 $$ method close $$ this.write(w, indentFactor, 0) $$ java.io.Writer $$ regular method exit $$ ( 46266, 46296 ) $$ @MustCall method close may not have been invoked on this.write(w, indentFactor, 0) or any of its aliases.
            return this.write(w, indentFactor, 0).toString();
                             ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1534: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONObject)value).write(writer, indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 51690, 51746 ) $$ @MustCall method close may not have been invoked on ((JSONObject)value).write(writer, indentFactor, indent) or any of its aliases.
            ((JSONObject) value).write(writer, indentFactor, indent);
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1536: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONArray)value).write(writer, indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 51809, 51864 ) $$ @MustCall method close may not have been invoked on ((JSONArray)value).write(writer, indentFactor, indent) or any of its aliases.
            ((JSONArray) value).write(writer, indentFactor, indent);
                                     ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1538: error: (required.method.not.called) $$ 4 $$ method close $$ new JSONObject((Map)value).write(writer, indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 51921, 51984 ) $$ @MustCall method close may not have been invoked on new JSONObject((Map)value).write(writer, indentFactor, indent) or any of its aliases.
            new JSONObject((Map) value).write(writer, indentFactor, indent);
                                             ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1540: error: (required.method.not.called) $$ 4 $$ method close $$ new JSONArray((Collection)value).write(writer, indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 52048, 52137 ) $$ @MustCall method close may not have been invoked on new JSONArray((Collection)value).write(writer, indentFactor, indent) or any of its aliases.
            new JSONArray((Collection) value).write(writer, indentFactor,
                                                   ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1543: error: (required.method.not.called) $$ 4 $$ method close $$ new JSONArray(value).write(writer, indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 52200, 52256 ) $$ @MustCall method close may not have been invoked on new JSONArray(value).write(writer, indentFactor, indent) or any of its aliases.
            new JSONArray(value).write(writer, indentFactor, indent);
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1557: error: (required.method.not.called) $$ 4 $$ method close $$ quote(value.toString(), writer) $$ java.io.Writer $$ regular method exit $$ ( 52801, 52832 ) $$ @MustCall method close may not have been invoked on quote(value.toString(), writer) or any of its aliases.
            quote(value.toString(), writer);
                 ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1597: error: (required.method.not.called) $$ 4 $$ method close $$ writeValue(writer, this.map.get(key), indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 54091, 54150 ) $$ @MustCall method close may not have been invoked on writeValue(writer, this.map.get(key), indentFactor, indent) or any of its aliases.
                writeValue(writer, this.map.get(key), indentFactor, indent);
                          ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONObject.java:1615: error: (required.method.not.called) $$ 4 $$ method close $$ writeValue(writer, this.map.get(key), indentFactor, newindent) $$ java.io.Writer $$ regular method exit $$ ( 54898, 54988 ) $$ @MustCall method close may not have been invoked on writeValue(writer, this.map.get(key), indentFactor, newindent) or any of its aliases.
                    writeValue(writer, this.map.get(key), indentFactor,
                              ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONArray.java:840: error: (required.method.not.called) $$ 4 $$ method close $$ this.write(sw, indentFactor, 0) $$ java.io.Writer $$ regular method exit $$ ( 27518, 27549 ) $$ @MustCall method close may not have been invoked on this.write(sw, indentFactor, 0) or any of its aliases.
            return this.write(sw, indentFactor, 0).toString();
                             ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONArray.java:878: error: (required.method.not.called) $$ 4 $$ method close $$ JSONObject.writeValue(writer, this.myArrayList.get(0), indentFactor, indent) $$ java.io.Writer $$ regular method exit $$ ( 28694, 28794 ) $$ @MustCall method close may not have been invoked on JSONObject.writeValue(writer, this.myArrayList.get(0), indentFactor, indent) or any of its aliases.
                JSONObject.writeValue(writer, this.myArrayList.get(0),
                                     ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlaeeaf948fe_smcpeak_ded_tgz-pJ8-ded_model_SerializationTestsJ8/src/org/json/JSONArray.java:891: error: (required.method.not.called) $$ 4 $$ method close $$ JSONObject.writeValue(writer, this.myArrayList.get(i), indentFactor, newindent) $$ java.io.Writer $$ regular method exit $$ ( 29240, 29347 ) $$ @MustCall method close may not have been invoked on JSONObject.writeValue(writer, this.myArrayList.get(i), indentFactor, newindent) or any of its aliases.
                    JSONObject.writeValue(writer, this.myArrayList.get(i),
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
15 errors
